--- a/src/Components/PricingPlans.css
+++ b/src/Components/PricingPlans.css
@@ -78,7 +78,21 @@ body {
     margin-bottom: 10px;
     color: #333;
 }
-
+.price-main{
+    display: flex;
+    justify-content: space-between;
+}
+.popular{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 70px;
+    min-height: 30px;
+    height: max-content;
+    background: var(--Component-Colors-Utility-Primary-Blue-50, #CEE0FF);
+    border-radius: 30px;
+    color: var(--Component-Colors-Utility-Primary-Blue-700, #053D99);
+}
 .pricing-card h4 {
     font-size: 32px;
     margin-bottom: 10px;
@@ -225,7 +239,6 @@ body {
     padding-right: 14px;
 }
 
-/* Popular Badge */
 .booster .pricing-card::before {
     content: "Popular";
     position: absolute;
@@ -237,6 +250,7 @@ body {
     border-radius: 5px;
     font-size: 14px;
     font-weight: bold;
+    z-index: 10; /* Ensure it's on top */
 }
 .booste{
     background-color: white;
