--- a/src/Components/PricingPlans.css
+++ b/src/Components/PricingPlans.css
@@ -14,6 +14,7 @@ body {
 
 /* Container */
 .pricing-container {
+    color:black;
     font-size: 13px;
     max-width: 1200px;
     margin: 0 auto;
@@ -98,6 +99,7 @@ body {
     margin-bottom: 10px;
     font-weight: 700;
     color: #333;
+    margin-top: -10px;
 }
 
 .price {
@@ -228,7 +230,9 @@ body {
     margin-top: auto; /* Push this container to the end of the card */
     width: 100%; /* Full width for proper alignment */
 }
-
+.personalise{
+    margin-top: -15px;
+}
 /* Button Container */
 .button-container {
     display: flex;
